# WetinDeySup-backend

./: Dockerfile  README.md  docker-compose.yml  env_sample  pyproject.toml
app/: db.py  main.py  schema.py  settings.py  utils.py
app/models/: __init__.py  base.py  user.py
app/routers/: auth.py  event.py  group.py  user.py
