[tool.poetry]
name = "wetindeysup-backend"
version = "0.1.0"
description = ""
authors = ["Gbenga Adeyi <adeyigbenga005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
asyncpg = "^0.28.0"
sqlalchemy = "^2.0.20"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["brypt"], version = "^1.7.4"}
pydantic = {extras = ["email"], version = "^2.3.0"}
pydantic-settings = "^2.0.3"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
ruff = "^0.0.290"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
